testsuite/tests/module/mod71.hs
-- !!! Illegal _ in expression
module M where
f x = x _ 1
